--- a/email.html
+++ b/email.html
@@ -28,18 +28,18 @@
           <div class="wrap">
             <div class="menu-icons">
               <div class="logo">
-              <img src="logo.png" id="logo" />
+              <img src="./images/logo.png" id="logo" />
               </div>
               <div class="menu">
-              <img src="dashboard.png" />
-                <img src="email.png" id="email" />
-              <img src="contact.png" id="contact" />
-              <img src="to do list.png" />
-              <img src="kanban.png" />
-              <img src="invoicing.png" />
-              <img src="file manager.png" />
-              <img src="calendar.png" />
-              <img src="banking.png" />
+              <img src="./images/dashboard.png" />
+                <img src="./images/email.png" id="email" />
+              <img src="./images/contact.png" id="contact" />
+              <img src="./images/to do list.png" id=" to do list"/>
+              <img src="./images/kanban.png"  />
+              <img src="./images/invoicing.png" />
+              <img src="./images/more.png" />
+              <img src="./images/calendar.png" />
+              <img src="./images/banking.png" />
               </div>
             </div>
           </div>
@@ -52,36 +52,36 @@
               <button type="button" class="btn">New Mail</button>
             </div>
             <div class="box">
-              <img src="Inbox.png" class="name" />
+              <img src="./images/Inbox.png" class="name" />
               <p style="color: #ff844b">index</p>
               <p style="color: #ff844b">99</p>
             </div>
             <div class="box1">
-              <img src="Sent.png" class="name" />
+              <img src="./images/Sent.png" class="name" />
               <p>sent</p>
             </div>
             <div class="box1">
-              <img src="Star 5.png" />
+              <img src="./images/Star 5.png" />
               <p>Favorite</p>
             </div>
             <div class="box1">
-              <img src="Draft.png" />
+              <img src="./images/Draft.png" />
               <p>Draft</p>
             </div>
             <div class="box1">
-              <img src="Label.png" />
+              <img src="./images/Label.png" />
               <p>Important</p>
             </div>
             <div class="box1">
-              <img src="Clock.png" />
+              <img src="./images/Clock.png" />
               <p>Clock</p>
             </div>
             <div class="box1">
-              <img src="Star 5.png" />
+              <img src="./images/Star 5.png" />
               <p>Star</p>
             </div>
             <div class="box1">
-              <img src="more.png" />
+              <img src="./images/more.png" />
               <p>More</p>
             </div>
           </div>
@@ -167,16 +167,16 @@
           <div class="headline">
           <h4 id="Preview">Preview</h4>
           <div class="icon1">
-          <img src="trash.png" id="trash" />
-          <img src="expand.png" id="expand" />
-          <img src="Vector.png" id="Vector" />
+          <img src="./images/trash.png" id="trash" />
+          <img src="./images/expand.png" id="expand" />
+          <img src="./images/Vector.png" id="Vector" />
           </div> 
           </div>
           <div class="subline">
             <h6 id="Tour Photography Assest" style="margin-top: 20px;">Tour Photography Assest</h6>
             <div class="icon2">
-              <img src="Star 5.png" id="Star 5" style=width:20px;  />
-              <img src="Information.png" id="information" style=width:20px; />
+              <img src="./images/Star 5.png" id="Star 5" style=width:20px;  />
+              <img src="./images/Information.png" id="information" style=width:20px; />
             </div>
           </div>
           <div class="text">
@@ -204,14 +204,14 @@
               <div class="imagebox">
                 <div class="topbox"></div>  
                   <div class="bottombox">
-                    <img src="Vector.png" id="Vector" style=width:15px;margin-left:10px; />
+                    <img src="./images/Vector.png" id="Vector" style=width:15px;margin-left:10px; />
                       <p>IMG_001.jpg</p>
                   </div>
               </div>   
               <div class="imagebox1">
                 <div class="topbox"></div>  
                   <div class="bottombox">
-                    <img src="Vector.png" id="Vector" style=width:15px;margin-left:20px; />
+                    <img src="./images/Vector.png" id="Vector" style=width:15px;margin-left:20px; />
                      <p>IMG_001.jpg</p>
                   </div>
                 </div> 
@@ -225,9 +225,9 @@
               <div class="bottombox1"></div>
             </div> 
             <div class="note">
-            <img src="Vector.png" id="Vector" style=width:15px; />
-            <img src="Image.png" id="image" style=width:15px; /> 
-            <img src="Dots.png" id="Dots" style=width:15px; />
+            <img src="./images/Vector.png" id="Vector" style=width:15px; />
+            <img src="./images/Image.png" id="image" style=width:15px; /> 
+            <img src="./images/Dots.png" id="Dots" style=width:15px; />
               <!-- <div class="button"> -->
                 <button type="button" class="btn" style="margin-left:278px;
                 margin-top:10px";>Send</button>
