--- a/email.html
+++ b/email.html
@@ -27,7 +27,7 @@
         <div class="col-1">
           <div class="wrap">
             <div class="menu-icons">
-              <div class="logo">
+              <div class="logo" style="margin-top: 12px;">
               <img src="./images/logo.png" id="logo" />
               </div>
               <div class="menu">
@@ -46,7 +46,7 @@
         </div>
 
         <div class="col-2">
-          <h4 id="emails">Email</h4>
+          <h4 id="emails" style="margin-top:20px">Email</h4>
           <div class="border">
             <div class="button">
               <button type="button" class="btn">New Mail</button>
@@ -164,7 +164,7 @@
           </div>
         </div>
         <div class="col-4">
-          <div class="headline">
+          <div class="headline" style="margin-top:20px">
           <h4 id="Preview">Preview</h4>
           <div class="icon1">
           <img src="./images/trash.png" id="trash" />
